# ekslistence

./: Cargo.toml  README.md  TODO.md
src/: main.rs
src/services/: applications.rs  audio.rs  battery.rs  bluetooth.rs  brightness.rs  cliphist.rs  hyprland.rs  mod.rs  notifications.rs  utils.rs
ui/: appwindow.slint
